Added PETSC_INCLUDES and SLEPC_INCLUDES variables where needed

--- a/CoreFlows/CMakeLists.txt
+++ b/CoreFlows/CMakeLists.txt
@@ -85,6 +85,8 @@ endif ()                                                                        
 													    #
 INCLUDE_DIRECTORIES(						   					    #
   ${CoreFlows_INCLUDES}											    #
+  ${PETSC_INCLUDES}
+  ${SLEPC_INCLUDES}
   )													    #
 													    #
 SET(CoreFlowsMain_SOURCES										    #
