--- a/CoreFlows/swig/CMakeLists.txt
+++ b/CoreFlows/swig/CMakeLists.txt
@@ -15,6 +15,6 @@ SET(_extra_lib_SWIG ${CDMATH_LIBRARIES} ${PETSC_LIBRARIES})
 SWIG_ADD_MODULE(CoreFlows python CoreFlows.i)
 SWIG_LINK_LIBRARIES(CoreFlows ${PYTHON_LIBRARIES} ${_extra_lib_SWIG} CoreFlows ${PETSC_LIBRARIES})
 
-INSTALL(TARGETS _CoreFlows DESTINATION lib/CoreFlows_Python)
-INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/CoreFlows.py DESTINATION bin/CoreFlows_Python)
-INSTALL(FILES ${CoreFlows_SOURCE_DIR}/main.py DESTINATION bin/)
+INSTALL(TARGETS _CoreFlows DESTINATION lib/coreflows)
+INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/CoreFlows.py DESTINATION bin/coreflows)
+INSTALL(FILES ${CoreFlows_SOURCE_DIR}/mainCoreFlows.py DESTINATION bin/)
