--- a/CoreFlows/CMakeLists.txt
+++ b/CoreFlows/CMakeLists.txt
@@ -65,8 +65,8 @@ if (COREFLOWS_WITH_DOCUMENTATION)                                               
       )                                                                                                     #
   add_custom_target (docCoreFlows COMMAND ${DOXYGEN_EXECUTABLE}                                                  #
   SOURCES ${PROJECT_BINARY_DIR}/Doxyfile)			                                            #
-  install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc/html DESTINATION share/doc/CoreFlows OPTIONAL)                  #
-  INSTALL(FILES ${CoreFlows_SOURCE_DIR}/Documentation/CoreFlows.pdf DESTINATION share/doc/CoreFlows OPTIONAL)	    #
+  install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc/html DESTINATION share/doc/coreflows-dev-doc OPTIONAL)                  #
+  INSTALL(FILES ${CoreFlows_SOURCE_DIR}/Documentation/CoreFlows.pdf DESTINATION share/doc OPTIONAL)	    #
 endif ()                                                                                                    #
                                                                                                             #
 # ------------- --------------------------------------------------------------------------------------------#
