--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -400,7 +400,7 @@ else( DEFINED PARAVIEW_VERSION OR DEFINED ENV{PARAVIEW_VERSION} )
   ENDIF( ${vtkConfig_file} STREQUAL "vtkConfig_file-NOTFOUND" )
 endif( DEFINED PARAVIEW_VERSION OR DEFINED ENV{PARAVIEW_VERSION} )
 
-  
+#Choose python 2 or 3  
 IF   ( ${PARAVIEW_VERSION} STRGREATER "5.6" OR ${PARAVIEW_VERSION} STREQUAL "5.6" )#Use python 3, use VERSION_GREATER_EQUAL if cmake >=3.7
   SET(PYTHON2OR3 "3")
   message(STATUS "PARAVIEW_VERSION greater than 5.6. We need python3 for postprocessing scripts.")
@@ -431,22 +431,24 @@ ELSE (${CMAKE_VERSION} VERSION_GREATER "3.12.0")
   set(Python_VERSION_MINOR ${PYTHON_VERSION_MINOR})
 ENDIF(${CMAKE_VERSION} VERSION_GREATER "3.12.0")
 
+#PyQt5
 IF  ( NOT PYQT5_ROOT_DIR )
     set(PYQT5_ROOT_DIR $ENV{PYQT5_ROOT_DIR} )
 ENDIF( NOT PYQT5_ROOT_DIR )
 
 #Matplotlib
-IF  ( NOT MATPLOTLIB_ROOT_DIR )
+IF   ( NOT MATPLOTLIB_ROOT_DIR )
     set(MATPLOTLIB_ROOT_DIR $ENV{MATPLOTLIB_ROOT_DIR} )
-ENDIF(MATPLOTLIB_ROOT_DIR )
+ENDIF( NOT MATPLOTLIB_ROOT_DIR )
 
-IF  ( NOT HDF5_ROOT_DIR )
+#HDF5_ROOT_DIR
+IF   ( NOT HDF5_ROOT_DIR )
   IF  ( ENV{HDF5_ROOT_DIR} )
     set(HDF5_ROOT_DIR $ENV{HDF5_ROOT_DIR} )
   ELSE( ENV{HDF5_ROOT_DIR} )
     set(HDF5_ROOT_DIR ${HDF5_ROOT} )
   ENDIF( ENV{HDF5_ROOT_DIR} )
-ENDIF(NOT HDF5_ROOT_DIR )
+ENDIF( NOT HDF5_ROOT_DIR )
 
 
 #Paraview library paths
